--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>Formsify | Empowering Web3 Forms</title>
+		<title>Formsify | Let's Create Better Forms</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
