--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 		<meta name="theme-color" content="#000000" />
 		<meta
 			name="description"
-			content="Formsify | Let's Create Better Forms"
+			content="Formsify helps you create Web3 empowered forms, which are decentralized, trustless and distributed."
 		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<!--
@@ -15,6 +15,29 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+		<!-- TWITTER -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@yupuday" />
+		<meta name="twitter:account_id" content="1460479438911537152" />
+		<meta property="twitter:title" content="Formsify" />
+		<meta
+			property="twitter:description"
+			content="Formsify helps you create better forms, which are decentralized, trustless and distributed. 💯"
+		/>
+		<meta name="twitter:creator" content="@yupuday" />
+		<meta
+			property="twitter:image:src"
+			content="https://raw.githubusercontent.com/githubotoro/formsify-web3-app/main/public/splash.png"
+		/>
+		<meta property="og:url" content="https://formsify.vercel.app/" />
+		<meta property="og:title" content="Formsify" />
+		<meta property="og:description" content="Let's Create Better Forms!" />
+		<meta
+			property="og:image"
+			content="https://raw.githubusercontent.com/githubotoro/formsify-web3-app/main/public/splash.png"
+		/>
+		<!-- TWITTER -->
 
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
